ingress/v1.21/alb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: alb-test-01
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http-healthcheck
  selector:
    app.kubernetes.io/name: alb-demo-app
