ingress/v1.21/alb-test-01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-test-01
  namespace: alb-test-01
spec:
  selector:
    app: alb-test-01
  type: NodePort
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 80
