ingress/v1.21/alb-test-02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-test-02
  namespace: alb-test-02
spec:
  selector:
    app: alb-test-02
  type: NodePort
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 80
